--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,13 @@
     <string name="choose_password">Choose Password</string>
     <string name="email"></string>
     <string name="enter_your_email">Enter your E-mail</string>
+    <string name="ok">Ok</string>
+    <string name="cancel">Cancel</string>
+    <string name="input_pwd_hint">Please input your password</string>
+    <string name="setLanguage">Set App Language</string>
+    <string name="eng_Lang">English</string>
+    <string name="ru_Lang">Russian</string>
+    <string name="language_chooser_title">Please Choose New Language</string>
+    <string name="too_many_users">Too many Users in Database, check Support for help</string>
+    <string name="incorrect_pwd">Incorrect Password</string>
 </resources>
