--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -16,4 +16,10 @@
     <string name="language_chooser_title">Сука Блядь</string>
     <string name="too_many_users">Слишком много пользователей в базе данных, обратитесь за помощью в службу поддержки</string>
     <string name="incorrect_pwd">Неверный пароль</string>
+    <string name="vault_entry_name">Введите название записи</string>
+    <string name="vault_url">Введите УРЛ</string>
+    <string name="vault_username">Введите имя пользователя</string>
+    <string name="vault_password">Введите пароль</string>
+    <string name="vault_save">Сохранить</string>
+    <string name="url_or_entryname">Необходимо указать либо имя записи, либо УРЛ!</string>
 </resources>
