--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,10 @@
     <string name="language_chooser_title">Please Choose New Language</string>
     <string name="too_many_users">Too many Users in Database, check Support for help</string>
     <string name="incorrect_pwd">Incorrect Password</string>
+    <string name="vault_entry_name">Enter Entry Name</string>
+    <string name="vault_url">Enter URL</string>
+    <string name="vault_username">Enter Username</string>
+    <string name="vault_password">Enter Password</string>
+    <string name="vault_save">Save</string>
+    <string name="url_or_entryname">Either Entry name or URL must be filled in!</string>
 </resources>
