--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="language_chooser_title">Please Choose New Language</string>
     <string name="too_many_users">Too many Users in Database, check Support for help</string>
     <string name="incorrect_pwd">Incorrect Password</string>
+    <string name="showAllSavedAccount">Show all saved Accounts</string>
+    <string name="back_to_main">Show all saved Accounts</string>
 </resources>
