[LS-030] refactor all tests to remove deprecated ActivityTestRule [BJ, RT]

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -7,7 +7,7 @@
     <string name="registration_enter_email">введите адрес электронной почты</string>
     <string name="registration_choose_username">Выберите имя пользователя</string>
     <string name="registration_choose_pwd">Выберите пароль</string>
-    <string name="btn_ok">ОK</string>
+    <string name="btn_ok">OK</string>
     <string name="btn_cancel">отмена</string>
     <string name="hint_input_password">введите пароль</string>
     <string name="language_set_text">Установите язык на русский</string>
