[LS-004] Implement Test Warning when Empty Password [LB,RT]

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="error_too_many_users_in_db">Too many Users in Database, check Support for help</string>
     <string name="error_incorrect_pwd">Incorrect Password</string>
     <string name="pwd_overview_text">TextView</string>
+    <string name="vault_save_changes_alert">Please enter a Password to Save the Changes</string>
 </resources>
