--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -24,4 +24,5 @@
     <string name="error_incorrect_pwd">Неверный пароль</string>
     <string name="pwd_overview_text">текстовый вид</string>
     <string name="vault_save_changes_alert">Пожалуйста, введите пароль, чтобы сохранить изменения</string>
+    <string name="vault_save_changes_alert_title">Нет пароля</string>
 </resources>
