--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -23,4 +23,6 @@
     <string name="error_too_many_users_in_db">Слишком много пользователей в базе данных, обратитесь за помощью в службу поддержки</string>
     <string name="error_incorrect_pwd">Неверный пароль</string>
     <string name="pwd_overview_text">текстовый вид</string>
+    <string name="sortfromAtoZ">Сортировать по названию от А до Я</string>
+    <string name="sortfromZtoA">Сортировать по названию от Я до А</string>
 </resources>
